--- a/Project05/Project05/Base.lproj/Main.storyboard
+++ b/Project05/Project05/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Lsb-44-Jp6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="05O-lP-pbl">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -39,10 +39,29 @@
                             <outlet property="delegate" destination="Lsb-44-Jp6" id="fij-Eo-hsW"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="01g-a6-Stm"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oHx-Zf-rcm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="33" y="-15"/>
+            <point key="canvasLocation" x="961.53846153846155" y="-15.639810426540283"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Ydn-mz-0l3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="05O-lP-pbl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aIL-dT-rGP">
+                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Lsb-44-Jp6" kind="relationship" relationship="rootViewController" id="RjN-Et-Cco"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Xh-xe-bz3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="32.307692307692307" y="-15.639810426540283"/>
         </scene>
     </scenes>
     <resources>
