--- a/Project13/Project13/Base.lproj/Main.storyboard
+++ b/Project13/Project13/Base.lproj/Main.storyboard
@@ -17,10 +17,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MXc-c0-J3b">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MXc-c0-J3b">
                                 <rect key="frame" x="16" y="91" width="358" height="607.66666666666663"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TZk-L9-2jy">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TZk-L9-2jy">
                                         <rect key="frame" x="10" y="10" width="338" height="587.66666666666663"/>
                                     </imageView>
                                 </subviews>
@@ -32,14 +32,14 @@
                                     <constraint firstItem="TZk-L9-2jy" firstAttribute="centerY" secondItem="MXc-c0-J3b" secondAttribute="centerY" id="Qq3-0R-TxW"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pEI-wo-Tde">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pEI-wo-Tde">
                                 <rect key="frame" x="16" y="718.66666666666663" width="358" height="50"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J1O-uv-wwz">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J1O-uv-wwz">
                                         <rect key="frame" x="0.0" y="0.0" width="358" height="50"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Intensity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gmd-Xr-IT5">
-                                                <rect key="frame" x="0.0" y="4" width="70" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intensity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gmd-Xr-IT5">
+                                                <rect key="frame" x="0.0" y="4" width="69.666666666666671" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="21" id="1oi-Xu-8mZ"/>
                                                 </constraints>
@@ -47,8 +47,8 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kTB-44-tyy">
-                                                <rect key="frame" x="76" y="0.0" width="284" height="30"/>
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kTB-44-tyy">
+                                                <rect key="frame" x="75.666666666666657" y="0.0" width="284.33333333333337" height="30"/>
                                                 <connections>
                                                     <action selector="intensityChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="clv-Tb-8wk"/>
                                                 </connections>
@@ -56,13 +56,17 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="Gmd-Xr-IT5" firstAttribute="top" secondItem="J1O-uv-wwz" secondAttribute="top" constant="4" id="UC7-ov-MbC"/>
+                                            <constraint firstAttribute="trailing" secondItem="kTB-44-tyy" secondAttribute="trailing" id="Z7w-fa-kVZ"/>
+                                            <constraint firstItem="Gmd-Xr-IT5" firstAttribute="leading" secondItem="J1O-uv-wwz" secondAttribute="leading" id="c8e-UX-4U1"/>
                                             <constraint firstItem="kTB-44-tyy" firstAttribute="leading" secondItem="Gmd-Xr-IT5" secondAttribute="trailing" constant="8" id="mRK-mn-D4y"/>
+                                            <constraint firstItem="kTB-44-tyy" firstAttribute="top" secondItem="J1O-uv-wwz" secondAttribute="top" id="tW2-wD-SES"/>
                                             <constraint firstItem="Gmd-Xr-IT5" firstAttribute="centerY" secondItem="kTB-44-tyy" secondAttribute="centerY" id="urW-F4-LFq"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ChE-mG-saL">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ChE-mG-saL">
                                 <rect key="frame" x="16" y="755.66666666666663" width="130" height="34.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="liV-7u-WIc"/>
@@ -73,7 +77,7 @@
                                     <action selector="changeFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rHw-31-i1c"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6QE-JE-IfL">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6QE-JE-IfL">
                                 <rect key="frame" x="294" y="755.66666666666663" width="80" height="34.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="As0-Df-aJe"/>
@@ -88,10 +92,17 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="pEI-wo-Tde" firstAttribute="leading" secondItem="ChE-mG-saL" secondAttribute="leading" id="5to-4u-9bd"/>
+                            <constraint firstItem="pEI-wo-Tde" firstAttribute="top" secondItem="MXc-c0-J3b" secondAttribute="bottom" constant="20" id="CZa-Ch-ot9"/>
+                            <constraint firstItem="ChE-mG-saL" firstAttribute="top" secondItem="MXc-c0-J3b" secondAttribute="bottom" constant="56.999999999999886" id="I8r-AO-klu"/>
                             <constraint firstItem="MXc-c0-J3b" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="PsX-4J-fFF"/>
+                            <constraint firstItem="MXc-c0-J3b" firstAttribute="leading" secondItem="pEI-wo-Tde" secondAttribute="leading" id="XOT-Nt-O0x"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pEI-wo-Tde" secondAttribute="bottom" constant="41.333333333333371" id="b06-Lr-ntu"/>
                             <constraint firstItem="MXc-c0-J3b" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="bMa-zc-bTf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6QE-JE-IfL" secondAttribute="bottom" constant="20" id="hjY-Hc-9tA"/>
+                            <constraint firstItem="MXc-c0-J3b" firstAttribute="trailing" secondItem="pEI-wo-Tde" secondAttribute="trailing" id="mQm-Wx-VQT"/>
                             <constraint firstItem="MXc-c0-J3b" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pPz-VM-Pr1"/>
+                            <constraint firstItem="pEI-wo-Tde" firstAttribute="trailing" secondItem="6QE-JE-IfL" secondAttribute="trailing" id="pl5-Bh-hIV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ChE-mG-saL" secondAttribute="bottom" constant="20" id="s2l-ed-7VR"/>
                             <constraint firstItem="ChE-mG-saL" firstAttribute="baseline" secondItem="6QE-JE-IfL" secondAttribute="baseline" id="zrt-zx-cXQ"/>
                         </constraints>
